2009-11-14  Larry Ewing  <lewing@novell.com>

	* media.cpp:
	* mediaelement.cpp: fix mediaelement rendering to match image and
	clean up the code in both a little bit.

2009-11-14  Larry Ewing  <lewing@novell.com>

	* shape.cpp (MeasureOverride): fix a bug that slipped in due to
	the previous shape changes.

	Fixes 653 and some unit tests.

2009-11-13  Jeffrey Stedfast  <fejj@novell.com>

	* mediaelement.cpp (Pause): Seems that playlist can actually be
	null here when the downloader fails, so properly handle null
	situations instead of asserting.

2009-11-13  Jeffrey Stedfast  <fejj@novell.com>

	* pipeline-ui.cpp (AcceptClicked): Don't need to strdup the
	CODEC_URL string - just pass it as an argument to
	Downloader::Open().
	(ToggleEula): When toggling the EULA on, make the dialog
	resizable. Likewise, when hiding the EULA, disable resize.
	(Show): Make the EULA scrollview expand/fill available space so
	that when the dialog gets resized, it expands as well.

2009-11-13  Larry Ewing  <lewing@novell.com>

	* shape.cpp: rework rectangle and ellipse layout logic so that it
	plays lightly nicer with other things. Fix stretch invalidation
	issue.

	Fixes MS 92 and moon 404 as well as some resizing issues visible
	on covertocover.

2009-11-13  Alan McGovern  <amcgovern@novell.com>

	* dependencyproperty.g.cpp: regen.

	* xaml.h:
	* xaml.cpp:
	* control.h:
	* template.cpp: DOs which are expanded from a ControlTemplate
	  need to keep track of the 'templateBindingSource' so that we
	  can attach new TemplateBindings later. This value is stored
	  in addition to 'IsTemplateItem' as DOs can be expanded from
	  templates which are not ControlTemplates (i.e.
	  DataTemplates). 

2009-11-13  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp:
	* type-generated.cpp:
	* frameworkelement.h:
	* frameworkelement.cpp: Move the invoking of OnApplyTemplate
	  from Control to FrameworkElement as ContentPresenter (a