@@ -1,3 +1,7 @@
+2009-11-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* dependencyobject.cpp: Remove some debug spew.
+
 2009-11-14  Larry Ewing  <lewing@novell.com>
 
 	* media.cpp:
